# edvance

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
api/: alembic.ini  conftest.py  main.py  pyproject.toml
api/core/: celery_app.py  config.py  database.py  dependencies.py  exception_handlers.py
api/infra/: __init__.py  provider.py
api/infra/queue/: __init__.py  base.py  cf_queue.py  sqs_backend.py
api/infra/storage/: __init__.py  base.py  r2_backend.py  s3_backend.py
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 001_auth_tables.py  002_tenancy_tables.py  003_roles_tables.py
api/modules/: __init__.py  routers_academic.py  routers_ai.py  routers_comms.py  routers_compliance.py  routers_docs.py  routers_exam.py  routers_finance.py  routers_identity.py  routers_institution.py  routers_media.py  routers_ops.py  routers_platform.py
api/modules/academic_year/: router.py
api/modules/admission/: router.py
api/modules/ai_analytics/: router.py
api/modules/ai_content/: router.py
api/modules/ai_doubt/: router.py
api/modules/announcements/: router.py
api/modules/attendance_coaching/: router.py
api/modules/attendance_hostel/: router.py
api/modules/attendance_school/: router.py
api/modules/auth/: router.py  test_auth.py
api/modules/b2b_api/: router.py
api/modules/branch/: router.py
api/modules/certificates/: router.py
api/modules/compliance/: router.py
api/modules/counselling/: router.py
api/modules/documents/: router.py
api/modules/dpdpa/: router.py
api/modules/email/: router.py
api/modules/exam_catalog/: router.py
api/modules/exam_paper/: router.py
api/modules/exam_session/: router.py
api/modules/exam_submission/: router.py
api/modules/homework/: router.py
portal/: pyproject.toml
portal/components/: alert.html  badge.html  breadcrumb.html  empty_state.html  form_field.html  modal.html  pagination.html  sidebar.html  stat_card.html  table.html
portal/tests/: test_module_02_tenancy.py  test_module_03_roles.py  test_module_04_institution.py
shared/: pyproject.toml
shared/shared/: __init__.py  constants.py
(+1846 files in other folders)
