[project]
name = "edvance-api"
version = "0.1.0"
description = "Edvance API — FastAPI monolith, all 57 modules"
requires-python = ">=3.12"
dependencies = [
    "edvance-shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "mangum>=0.17",          # AWS Lambda handler
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",          # async PostgreSQL driver
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
    "celery[sqs]>=5.4",      # SQS as broker
    "boto3>=1.34",
    "weasyprint>=62",         # PDF: fee invoice + report card only
    "firebase-admin>=6.5",    # FCM push notifications
    "python-multipart>=0.0.9",
]

[tool.uv]
sources = { "edvance-shared" = { workspace = true } }
