[project]
name = "edvance-portal"
version = "0.1.0"
description = "Edvance Portal — Django + HTMX admin interface"
requires-python = ">=3.12"
dependencies = [
    "edvance-shared",
    "django>=5.0",
    "django-htmx>=1.17",          # HTMX helpers + middleware
    "psycopg[binary]>=3.1",       # sync PostgreSQL driver for Django
    "gunicorn>=22.0",
    "whitenoise>=6.7",            # static file serving
    "django-storages[s3]>=1.14",  # R2/S3 media storage
    "boto3>=1.34",
    "pillow>=10.3",               # image processing
    "weasyprint>=62",             # PDF: fee receipts, report cards
    "django-widget-tweaks>=1.5",  # template form rendering
]

[tool.uv]
sources = { "edvance-shared" = { workspace = true } }
